--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.0.2"
+    "@tauri-apps/api": "^1.0.2",
+    "servor": "^4.0.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.4"
