npm run localhost

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "rusttauri1-0",
-  "scripts": {
-    "tauri": "tauri"
-  },
-  "dependencies": {
-    "@tauri-apps/api": "^1.0.2",
-    "servor": "^4.0.2"
-  },
-  "devDependencies": {
-    "@tauri-apps/cli": "^1.0.4"
-  }
+    "name": "rusttauri1-0",
+    "scripts": {
+        "tauri": "tauri",
+        "localhost": "./node_modules/.bin/servor dist index.html 8080 --reload"
+    },
+    "dependencies": {
+        "@tauri-apps/api": "^1.0.2",
+        "servor": "^4.0.2"
+    },
+    "devDependencies": {
+        "@tauri-apps/cli": "^1.0.4"
+    }
 }
