--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "servor": "^4.0.2"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^1.0.4"
+        "@tauri-apps/cli": "^1.0.4",
+        "tslib": "^2.4.0",
+        "typescript": "^4.7.4"
     }
 }
