--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "servor": "^4.0.2"
     },
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^13.3.0",
+        "@rollup/plugin-typescript": "^8.3.3",
         "@tauri-apps/cli": "^1.0.4",
+        "rollup": "^2.77.0",
         "tslib": "^2.4.0",
         "typescript": "^4.7.4"
     }
