--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "rusttauri1-0",
     "scripts": {
         "tauri": "tauri",
-        "localhost": "./node_modules/.bin/servor dist index.html 8080 --reload"
+        "localhost": "./node_modules/.bin/servor dist index.html 8080 --reload",
+        "ui-build": "./node_modules/.bin/rollup -c",
+        "ui-dev": ".node_modules/.bin/rollup -c -w & npm run localhost"
     },
     "dependencies": {
         "@tauri-apps/api": "^1.0.2",
