--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "tauri": "tauri",
         "localhost": "./node_modules/.bin/servor dist index.html 8080 --reload",
         "ui-build": "./node_modules/.bin/rollup -c",
-        "ui-dev": ".node_modules/.bin/rollup -c -w & npm run localhost"
+        "ui-dev": "./node_modules/.bin/rollup -c -w & npm run localhost"
     },
     "dependencies": {
         "@tauri-apps/api": "^1.0.2",
